05/18/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Enhanced the syntax highlighting to support highlighting namespace
      prefixes and markup.
    * The source view now highlights ]]> in text as invalid because it is.
    * Fixed bug that caused attribute values to be highlighted incorrectly if
      the attribute had different types of quotes in it. Like
      value="blah='test'"

05/10/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added an options panel for the source view that allows you to specify
      colors that are used for syntax highlighting

05/10/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed the soft tabs option, key mnemonics, and scrollbar after adding
      syntax highlighting support.
    * Fixed the find dialog after adding syntax highlighting
    * Added a context menu to the source view. This allows you to execute the
      actions in the edit menu from a right-click menu.

05/10/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added syntax highlighting support

04/28/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the options panel to conform to the new OptionsPanel interface in
      jsXe core.

04/27/2005 Ian Lewis <IanLewis@member.fsf.org>

    * Updated the text area to use a monospaced font.

03/04/2005 version 0.3 pre15   Ian Lewis <IanLewis@member.fsf.org>

    * Updated to work with jsXe 0.3 pre15

02/16/2005 version 0.3 pre11   Ian Lewis <IanLewis@member.fsf.org>

    * Updated to use the XMLDocument.IS_USING_SOFT_TABS property instead of
      the sourceview SOFT_TABS property.

01/08/2005 version 0.3 pre9    Ian Lewis <IanLewis@member.fsf.org>

    * Updated so that getVersion() works properly;

01/05/2005 version 0.3 pre7    Ian Lewis <IanLewis@member.fsf.org>

    * Updated to use new Plugin API
    * Added a dialog to continue searching from the beginning of a file.

12/13/2004  verison 0.3 pre2    Ian Lewis <IanLewis@member.fsf.org>

    * Updated to use the build properties to get the plugin version
