@@ -33,7 +33,7 @@
     <property name="main.class" value="sourceview.SourceViewPlugin"/>
 		<property name="major.version" value="0"/>
 		<property name="minor.version" value="4"/>
-		<property name="build.version" value="1"/>
+		<property name="build.version" value="3"/>
 		<property name="app.version" value="${major.version}.${minor.version}.${build.version}"/>
 		<property name="app_version" value="${major.version}_${minor.version}_${build.version}"/>
         <property name="implementation.version" value="${major.version}.${minor.version}.${build.version}"/>
