@@ -1,1 +1,1 @@
-dependency.0=jsxe 00.04.01.00
+dependency.0=jsxe 00.04.03.00
